Fix mobile collapse menu

--- a/source/assets/stylesheets/_main.sass
+++ b/source/assets/stylesheets/_main.sass
@@ -157,3 +157,7 @@ body
 
   .logo
     margin: 27px 5px 0 15px !important
+
+  .navbar-nav > .active
+    background: transparent !important
+    border: none !important
